init: added 'build-tests' setup

--- a/index.html
+++ b/index.html
@@ -4,6 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Совкомбанк: «Альпака-календарь»</title>
+    <link rel="stylesheet" href="/src/sass/styles.scss" />
   </head>
-  <body></body>
+  <body>
+    <h1>
+      Sovcombank
+
+      <svg aria-hidden="true">
+        <use href="/img/sprite.svg#html" />
+      </svg>
+
+      <svg aria-hidden="true">
+        <use href="/img/sprite.svg#css" />
+      </svg>
+
+      <svg aria-hidden="true">
+        <use href="/img/sprite.svg#js" />
+      </svg>
+    </h1>
+
+    <svg aria-hidden="true">
+      <use href="/img/sprite.svg#html" />
+    </svg>
+
+    <svg aria-hidden="true">
+      <use href="/img/sprite.svg#css" />
+    </svg>
+
+    <svg aria-hidden="true">
+      <use href="/img/sprite.svg#js" />
+    </svg>
+
+    <div id="app"></div>
+
+    <script src="/src/main.js" type="module"></script>
+  </body>
 </html>
