features: updated 'calendar' logic
CHANGELOG:
– (refactor): main JS-logic separeated into modules;
– (refactor): JS cleaned and made more readable;
– (features): added 'Calendar' class for main 'calendar' logic;

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </button>
         </header>
 
-        <menu class="calendar__dates" id="calendar"></menu>
+        <menu class="calendar__dates" data-js-calendar></menu>
 
         <!--
           ПРИМЕЧАНИЯ РАЗРАБОТЧИКА:
