refactor: moved 'main.js' to '/js/'

--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
 
       <menu class="theme-switch" data-theme-switch="container">
         <li class="theme-switch__item" data-theme-switch="parent">
-          <button
-            type="button"
-            class="theme-switch__trigger"
-            title="Светлая тема"
-            data-theme-switch="trigger"
-            data-theme-apply="light"
-          >
+          <button type="button" class="theme-switch__trigger" title="Светлая тема" data-theme-switch="trigger" data-theme-apply="light">
             <span class="visually-hidden">Переключить на Светлую тему</span>
 
             <svg width="48" height="48" class="theme-switch__trigger-icn" aria-hidden="true">
@@ -28,13 +22,7 @@
         </li>
 
         <li class="theme-switch__item" data-theme-switch="parent">
-          <button
-            type="button"
-            class="theme-switch__trigger"
-            title="Автоопределение темы"
-            data-theme-switch="trigger"
-            data-theme-apply="auto"
-          >
+          <button type="button" class="theme-switch__trigger" title="Автоопределение темы" data-theme-switch="trigger" data-theme-apply="auto">
             <span class="visually-hidden">Включить автоопределние системной цветовой схемы</span>
 
             <svg width="48" height="48" class="theme-switch__trigger-icn" aria-hidden="true">
@@ -44,13 +32,7 @@
         </li>
 
         <li class="theme-switch__item" data-theme-switch="parent">
-          <button
-            type="button"
-            class="theme-switch__trigger"
-            title="Тёмная тема"
-            data-theme-switch="trigger"
-            data-theme-apply="dark"
-          >
+          <button type="button" class="theme-switch__trigger" title="Тёмная тема" data-theme-switch="trigger" data-theme-apply="dark">
             <span class="visually-hidden">Переключить на Тёмную тему</span>
 
             <svg width="48" height="48" class="theme-switch__trigger-icn" aria-hidden="true">
@@ -109,13 +91,7 @@
         <template id="calendar-date-temp">
           <li class="calendar__date-item" data-js-date="container">
             <label class="calendar__date-trigger" data-js-date="parent">
-              <input
-                type="checkbox"
-                class="visually-hidden"
-                name="undef-0"
-                data-js-date="trigger"
-                data-js-date-val="0"
-              />
+              <input type="checkbox" class="visually-hidden" name="undef-0" data-js-date="trigger" data-js-date-val="0" />
               <span class="calendar__date-text" data-js-date="text-val">0</span>
             </label>
           </li>
@@ -125,13 +101,7 @@
         <template id="calendar-date-other-month-temp">
           <li class="calendar__date-item calendar__date-item--other-month" data-js-date="container">
             <label class="calendar__date-trigger" data-js-date="parent">
-              <input
-                type="checkbox"
-                class="visually-hidden"
-                name="undef-0"
-                data-js-date="trigger"
-                data-js-date-val="0"
-              />
+              <input type="checkbox" class="visually-hidden" name="undef-0" data-js-date="trigger" data-js-date-val="0" />
               <span class="calendar__date-text" data-js-date="text-val">0</span>
             </label>
           </li>
@@ -139,6 +109,6 @@
       </section>
     </main>
 
-    <script src="/src/main.js" type="module"></script>
+    <script src="/src/js/main.js" type="module"></script>
   </body>
 </html>
