hotfix: fixed pics paths

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
           из разметки и отображал бы через стили.
         -->
         <picture class="calendar__bg-pic">
-          <source type="image/webp" srcset="/img/bg/bg-alpaca.webp, /img/bg/bg-alpaca@2x.webp 2x" />
-          <source type="image/jpeg" srcset="/img/bg/bg-alpaca.jpg, /img/bg/bg-alpaca@2x.jpg 2x" />
-          <img width="320" height="284" src="/img/bg/bg-alpaca.jpg" alt="" />
+          <source type="image/webp" srcset="./img/bg/bg-alpaca.webp, ./img/bg/bg-alpaca@2x.webp 2x" />
+          <source type="image/jpeg" srcset="./img/bg/bg-alpaca.jpg, ./img/bg/bg-alpaca@2x.jpg 2x" />
+          <img width="320" height="284" src="./img/bg/bg-alpaca.jpg" alt="" />
         </picture>
 
         <!-- Темплейт разметки дефолтного элемента списка -->
