--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Совкомбанк: «Альпака-календарь»</title>
+
+    <!-- Фавиконки -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="./img/favicons/favicon-96x96.png" />
+    <link rel="icon" type="image/svg+xml" href="./img/favicons/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="192x192" href="./img/favicons/android-icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="./img/favicons/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicons/favicon-16x16.png" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+    <link rel="manifest" type="application/manifest+json" href="./site.webmanifest" />
+    <meta name="apple-mobile-web-app-title" content="SCB-Test" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="./img/favicons/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!-- Стили -->
     <link rel="stylesheet" href="/src/sass/styles.scss" />
   </head>
   <body>
